opam-version: "2.0"
name: "timer"
version: "1.0"
synopsis: "Timer function timing framework"
description: """
timer is a function timing framework that is used
to time the execution time of expressions or
functions
"""
maintainer: "Nikunj Chawla <nikchawla312@gmail.com>"
authors: "Nikunj Chawla <nikchawla312@gmail.com>"
homepage: "https://github.com/nik312123/timer"
dev-repo: "git+https://github.com/nik312123/timer.git"
bug-reports: "https://github.com/nik312123/timer/issues"
doc: ""
depends: [
    "ocaml" {>= "4.08.1"}
    "dune" {>= "2.7.1"}
    "base-bytes"
    "base-unix"
]
build: [
    ["dune" "build" "-p" name "-j" jobs]
    ["dune" "runtest" "-p" name "-j" jobs] {with-test}
    ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
